--- a/app/globals.css
+++ b/app/globals.css
@@ -69,3 +69,13 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #e6e6e6;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
